--- a/app/components/container/styles.css
+++ b/app/components/container/styles.css
@@ -1,11 +1,12 @@
-[data-container] {
+article {
+  display: flex;
+  flex-direction: column;
   position: absolute;
+  background-color: #9f8c5f;
+  width: -moz-fit-content; /* Firefox */
   width: fit-content;
-  display: grid;
   border-style: solid;
-  border-width: 2px;
   -webkit-user-select: none; /* Safari ios support*/
   user-select: none;
-  background-color: #9f8c5f;
   z-index: 0;
 }
